<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="48dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:maxHeight="200dp"
            android:scaleType="fitCenter"
            android:src="@drawable/splash" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:textColorHint="#fc2e00">

            <EditText
                android:id="@+id/usertxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="number"
                android:textColor="#fc2e00" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColorHint="#fc2e00">

            <EditText
                android:id="@+id/passwardtxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/passwardd"
                android:inputType="textPassword"
                android:textColor="#fc2e00"

                />


        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="11dp"
            android:text="@string/Remember"
            android:textColor="#fc2e00"

            />


        <Button
            android:id="@+id/loginbuton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#fc2e00"
            android:text="@string/signin"
            android:textColor="#ffffff"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="22dp"
            android:text="@string/create"
            android:textColor="#fc2e00"
            android:textSize="14sp" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />

    </LinearLayout>
</ScrollView>