<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="48dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:adjustViewBounds="true"
            android:maxHeight="150dp"
            android:scaleType="fitCenter"
            android:src="@drawable/splash" />

        <TextView
            android:id="@+id/remember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"

            android:layout_marginLeft="60dp"
            android:layout_marginTop="11dp"
            android:layout_marginRight="60dp"
            android:text="@string/contact"
            android:textColor="#fc2e00"

            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="22dp"
            android:textColorHint="#fc2e00">

            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="number"
                android:textColor="#fc2e00" />


        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/loginbuton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="#fc2e00"
            android:text="@string/remember"
            android:textColor="#ffffff"
            android:textSize="18sp" />
    </LinearLayout>

</ScrollView>